--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Project/EscapeTheStudyroom/.idea/workspace.xml
 Project/EscapeTheStudyroom/.idea/workspace.xml
 Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
