--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Project/EscapeTheStudyroom/.idea/workspace.xml
 Project/EscapeTheStudyroom/.idea/workspace.xml
 Project/EscapeTheStudyroom/.idea/workspace.xml
 Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
