Achtung ich pushe
Yied

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,6 @@
 
-+
-# NetBeans specific #
-
-+nbproject/private/
-+
-build/
-
-+nbbuild/
-+
-out/
-+
-dist/
-+
-nbdist/
-+
-nbactions.xml
-
-+nb-configuration.xml
-+
-+
-
-# Class Files #
-+
-*.class
-
-+
-# Package Files #
-
-+*.jar
-+
-*.war
-+
-*.ear
+Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
+Project/EscapeTheStudyroom/.idea/workspace.xml
